SGTRR-2270 Editor/Image Item: Left Arrow doesn't work: fixed carousel buttons z-index position

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -1191,12 +1191,14 @@ Social Buttons
     position: absolute;
     top: 150px;
     left: 0px;
+    z-index: 10;
 }
 
 .custom-slide-next-editor{
     position: absolute;
     top: 150px;
     right: 0px;
+    z-index: 10;
 }
 
 .custom-slide-prev{
